<resources>
    <string name="app_name">VynkPay</string>
    <string name="panInfo">
<![CDATA[I hereby declare that the details furnished above are true & correct to the best of my knowledge]]>
</string>
    <string name="otpInfo">On continue one time password will be send to your number, please verify.</string>
    <string name="oops">Oops something went wrong</string>
    <string name="valid_new_password">Please enter valid password</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="valid_phone">Please enter valid phone number</string>
    <string name="valid_otp">Please enter valid otp</string>
    <string name="valid_amount">Please enter valid amount</string>
    <string name="select_amount">Please select amount</string>
    <string name="valid_datacard">Please enter valid data card number</string>
    <string name="valid_landline">Please enter a valid landline number</string>
    <string name="valid_account">Please enter a valid account number</string>
    <string name="valid_operator">Please select an operator</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="more">More</string>
    <string name="insurance">Insurance</string>
    <string name="gass">Gas</string>
    <string name="landline">Landline</string>
    <string name="datacard">Data Card</string>
    <string name="electirc">Electricity</string>
    <string name="dth">DTH</string>
    <string name="broad">Broadband</string>
    <string name="rec">Mobile Recharge</string>
    <string name="idDummy">Jenny1967</string>
    <string name="userid">User id:</string>
    <string name="welcome">Welcome To VynkPay</string>
    <string name="please_email">Please enter email id</string>
    <string name="please_password">Please enter password</string>
    <string name="please_phone">Please enter phone number</string>
    <string name="old_password_fill">Please enter old password</string>
    <string name="old_new_fill">Please enter new password</string>
    <string name="old_confirm_fill">Please enter confirm password</string>
    <string name="old_not_valid_fill">Please enter a valid old password</string>
    <string name="new_not_valid_fill">Please enter a valid new password</string>
    <string name="confirm_not_valid_fill">Please enter a valid confirm password</string>
    <string name="please_valid_password">Please enter a valid password</string>
    <string name="valid_first_name">Please enter a valid first name</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_city">Please enter city</string>
    <string name="please_enter_state">Please enter state</string>
    <string name="please_enter_code">Please enter postal code</string>
    <string name="valid_last_name">Please enter a valid last name</string>
    <string name="valid_pin">Please enter a valid postal code</string>
    <string name="valid_ifsc">Please enter a IFSC code</string>
    <string name="valid_payment_method">Please select a payment method</string>
    <string name="valid_beneficiary">Please select valid beneficiary</string>
    <string name="not_matched_account">Account Number not matching</string>
    <string name="channel_name">app_name</string>
    <string name="cancel">Cancel</string>
    <string name="payment_cancelled">Payment process cancelled</string>
    <string name="range">Entered gift card amount must be in range of</string>
    <string name="symbole_rs">₹</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_date">Select Date</string>
    <string name="search">Search</string>
    <string name="recent_search">Recent Searches</string>
    <string name="bookings">Bookings</string>
    <string name="grant">Grant</string>
    <string name="gotPermission">Go to Permissions to Grant Location</string>
    <string name="unableToGetPermission">Unable to get Permission</string>
    <string name="needMultiplePermission">Need Multiple Permissions</string>
    <string name="needMultiplePermissionMsg">This app needs Camera, Storage and Location permissions.</string>
    <string name="gotoPermission">Go to Permissions Option to Grant Permission(s)</string>
    <string name="exit">Exit</string>
    <string name="dummyShortText">Contrary to popular belief, Lorem Ipsum is not simply random text.</string>
    <string name="dummyLongText">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.\n\nContrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="availableBalance">Available Balance</string>
    <string name="cashBackReward">Cashback Reward</string>
    <string name="offers">Offers</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="inbox">Inbox</string>
    <string name="services">Services</string>
    <string name="water">Water</string>
    <string name="whatsNew">Whats New</string>
    <string name="addMoney">Add Money</string>
    <string name="pleaseEnterUserName">Please enter username</string>
    <string name="timeOut">Please check internet connection</string>
    <string name="requestUnAuthorized">Request unauthorized</string>
    <string name="serverError">Server error</string>
    <string name="networkIssue">Network issue</string>
    <string name="parserError">Parser error</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="flight">Flights</string>
    <string name="hotel">Hotels</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="park">Theme Park</string>
    <string name="gift">Gift Card</string>
    <string name="loginacc">Login to Your Account</string>
    <string name="otp">OTP</string>
    <string name="onetimepassward">One Time Password has been sent to your mobile number please enter below and verify your account</string>
    <string name="registernew">REGISTER</string>
    <string name="referalid">Don\'t have referral Id? Use Default User ID <font fgcolor="#B10D25">Vynkpay</font></string>
    <string name="agree">I agree to <font fgcolor="#B10D25">User Agreement</font> and <font fgcolor="#B10D25">Privacy Policy</font></string>
    <string name="agreeaffiliate">I agree <font fgcolor="#B10D25">Affiliate Agreement</font></string>
    <string name="regsucess">REGISTRATION SUCCESSFUL</string>
    <string name="already_account">Already have Account? <font fgcolor="#B10D25">LOGIN</font></string>
    <string name="bonusWallet">Earning Wallet</string>
    <string name="searchUsername">Search Username</string>
    <string name="amount">Amount</string>
    <string name="viewPrivacyPolicy">View Privacy Policy</string>
    <string name="disagree">Disagree</string>
    <string name="privacySettingContent">We need permission to access your contact list for mobile recharge or bill payments. Our system will look up for your service provider company after entering the mobile number. This info is only to make your experience better. we don’t use this information for any other activities.</string>
    <string name="withdrawalRequest">Withdrawal Request</string>
    <string name="withdrawalAmount">Withdrawal Amount</string>
    <string name="withdrawalRequestSubText">One time password has been sent to\nyour registered mobile number or email.</string>
    <string name="enterOTP">Enter OTP</string>
    <string name="submit">Submit</string>
    <string name="remark">Remark</string>
    <string name="ok">OK</string>
    <string name="rs">\u20B90</string>
    <string name="ontime">Enter one time password sent to your mobile number</string>
    <string name="tranfer">Transfer</string>
    <string name="enterpdetailbelow">Enter detail below</string>
</resources>