<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/mainBackColor"
        android:orientation="vertical">

        <include layout="@layout/toolbar_new_rcg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@color/colorPrimary"
                            android:padding="16dp">
                        </LinearLayout>

                    </FrameLayout>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_marginTop="-70dp"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        app:cardElevation="@dimen/_5sdp"
                        android:layout_height="@dimen/_100sdp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="1"
                            android:gravity="center">

                            <com.vynkpay.custom.BoldTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bonusWallet"
                                android:textSize="@dimen/_15sdp"
                                android:textColor="@color/black" />

                            <com.vynkpay.custom.BoldTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rs"
                                android:id="@+id/tvAvailableBal"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/_16sdp" />
                            <com.vynkpay.custom.NormalTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/availableBalance"
                                android:textSize="@dimen/_14sdp" />




                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <com.vynkpay.custom.BoldTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tranfer"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_18sdp"
                        android:textAllCaps="true"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:textColor="@color/black" />

                    <com.vynkpay.custom.NormalTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enterpdetailbelow"
                        android:gravity="center"
                        android:paddingRight="@dimen/_16sdp"
                        android:paddingLeft="@dimen/_16sdp"
                        android:textSize="@dimen/_14sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_5sdp" />

                    <com.vynkpay.custom.NormalEditText
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_24sdp"
                        android:layout_marginLeft="@dimen/_24sdp"
                        android:gravity="center"
                        android:focusableInTouchMode="false"
                        android:editable="false"
                        android:focusable="false"
                        android:id="@+id/usernameET"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp"
                        android:textColor="@color/color_text"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:hint="@string/searchUsername"
                        android:background="@drawable/custom_rectangle"/>

                    <com.vynkpay.custom.NormalEditText
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_24sdp"
                        android:layout_marginLeft="@dimen/_24sdp"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:id="@+id/amountET"
                        android:imeOptions="actionNext"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp"
                        android:textColor="@color/color_text"
                        android:hint="@string/amount"
                        android:background="@drawable/custom_rectangle"/>

                    <com.vynkpay.custom.NormalEditText
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginRight="@dimen/_24sdp"
                        android:layout_marginLeft="@dimen/_24sdp"
                        android:gravity="center"
                        android:inputType="text"
                        android:id="@+id/remarkET"
                        android:imeOptions="actionDone"
                        android:paddingStart="@dimen/_16sdp"
                        android:paddingEnd="@dimen/_16sdp"
                        android:textColor="@color/color_text"
                        android:hint="@string/remark"
                        android:background="@drawable/custom_rectangle"/>

                    <com.vynkpay.custom.NormalButton
                        android:id="@+id/submitButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/round_corner_red"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_24sdp"
                        android:layout_marginLeft="@dimen/_24sdp"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:text="@string/tranfer"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/white" />




                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>
    </LinearLayout>
</layout>
