<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_20sdp"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/reques_icon"
                    android:tint="@color/colorPrimary"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"/>

                <com.vynkpay.custom.NormalBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:textAllCaps="true"
                    android:text="@string/withdrawalRequest"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2sdp"/>

                <com.vynkpay.custom.NormalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/graycolor"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/withdrawalRequestSubText"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"/>

                <com.vynkpay.custom.NormalEditText
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center"
                    android:inputType="number"
                    android:id="@+id/otpET"
                    android:maxLength="6"
                    android:textColor="@color/color_text"
                    android:hint="@string/enterOTP"
                    android:background="@drawable/custom_rectangle"/>

                <com.vynkpay.custom.NormalButton
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/round_corner_red"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/submit"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_16sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ProgressBar
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_gravity="center"/>

</FrameLayout>
